@@ -7,7 +7,8 @@ Section: python
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: Emilio Pozuelo Monfort <pochu@debian.org>, Iain Lane <laney@debian.org>, Jeremy Bicha <jbicha@debian.org>, Michael Biebl <biebl@debian.org>
-Build-Depends: debhelper (>= 9),
+Build-Depends: debhelper (>= 10),
+               dh-python,
                dpkg-dev (>= 1.16.1~),
                gir1.2-gtk-3.0 <!nocheck>,
                gnome-common,
@@ -36,8 +37,6 @@ Build-Depends: debhelper (>= 9),
                python3-all-dbg,
                python-apt-dbg,
                python-cairo-dbg,
-               dh-autoreconf,
-               dh-python,
 X-Python-Version: >= 2.7
 Standards-Version: 4.1.0
 Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/pygobject
